Fix explore index alignment

--- a/app/assets/stylesheets/explore.css
+++ b/app/assets/stylesheets/explore.css
@@ -1,10 +1,11 @@
 .explore-container {
     position: relative;
 
-    padding: 60px 10px;
-    /* margin: 0 auto; */
+    /* padding: 60px 10px; */
+    margin: 80px auto;
     background-color: #34526f;
     display: flex;
+    justify-content: center;
 }
 
 .explore-posts {
